<resources>
    <string name="app_name" translatable="false">Schedule</string>
    <string name="app_language">English</string>

    <string name="app_language_en" translatable="false">English</string>
    <string name="app_language_ru" translatable="false">Русский</string>
    <string name="app_language_be" translatable="false">Беларуская</string>

    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>

    <string name="error_null_body">Body is null</string>

    <string name="action_retry">Retry</string>
    <string name="action_back">Back</string>

    <string name="snack_bar_groups_not_found">No groups were found</string>
    <string name="snack_bar_schedule_not_found">No schedule found</string>
    <string name="snack_bar_teacher_not_found">No teacher found</string>
    <string name="snack_bar_undefined_error">Undefined cause of error</string>

    <string name="menu_schedule_title">Schedule</string>
    <string name="menu_bookmarks_title">Bookmarks</string>
    <string name="menu_settings_title">Settings</string>

    <string name="toolbar_departments_title">Mode of study</string>
    <string name="toolbar_faculties_title">Faculty</string>
    <string name="toolbar_courses_title">Course</string>
    <string name="toolbar_groups_title">Group</string>
    <string name="toolbar_schedule_title">Schedule</string>
    <string name="toolbar_teacher_title">Teacher</string>
    <string name="toolbar_bookmarks_title">Bookmarks</string>
    <string name="toolbar_settings_title">Settings</string>
    <string name="toolbar_languages_title">Languages</string>
    <string name="toolbar_themes_title">Themes</string>

    <string name="toolbar_bookmark_action">Add to bookmarks</string>
    <string name="toolbar_date_range_action">Pick a date range</string>
    <string name="toolbar_refresh_action">Refresh</string>

    <string name="teacher_email_title" translatable="false">Email</string>

    <string name="setting_language_title">Language</string>
    <string name="setting_theme_title">Theme</string>

    <string name="course_first_title">1 year</string>
    <string name="course_second_title">2 year</string>
    <string name="course_third_title">3 year</string>
    <string name="course_fourth_title">4 year</string>
    <string name="course_fifth_title">5 year</string>
    <string name="course_sixth_title">6 year</string>

    <string name="select_dates">Select dates</string>

    <string-array name="title_day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>