<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:title="@string/toolbar_settings_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.grsu.schedule_project.presentation.widgets.SettingItemView
        android:id="@+id/languageItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_line_item_height"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:description="@string/app_language"
        app:iconRes="@drawable/ic_baseline_language_24"
        app:title="@string/setting_language_title" />

    <View
        android:id="@+id/languageHorizontalDivider"
        style="@style/Divider.Horizontal" />

</LinearLayout>